<?xml version="1.0" encoding="utf-8"?>
<resources>

    <string name="app_name">iHW</string>
    <string name="hello_world">Hello world!</string>
    <string name="prompt_welcome">Welcome to iHW for Android!</string>
    <string name="title_activity_schedule">View Schedule</string>
    <string name="title_activity_edit_courses">Edit Courses</string>
    <string name="button_download">Download from HW.com</string>
    <string name="button_add_manually">Add Courses Manually</string>
    <string name="prompt_hw_login">Loading login page&#8230;</string>
    <string name="title_activity_download_schedule">Download Course Information</string>
    <string name="title_activity_guided_edit_courses">GuidedEditCoursesActivity</string>
    <string name="action_done">Done</string>
    <string name="action_add_course">Add Course</string>
    <string name="hint_course_name">Course Name</string>
    <string name="hint_course_period">Period</string>

    <string-array name="term_options">
        <item>Full Year</item>
        <item>First Semester</item>
        <item>Second Semester</item>
        <item>First Trimester</item>
        <item>Second Trimester</item>
        <item>Third Trimester</item>
    </string-array>

    <string name="action_delete">Delete</string>
    <string name="message_no_courses">You have no courses.</string>
    <string name="campus_middle">Middle School</string>
    <string name="campus_upper">Upper School</string>
    <string name="prompt_choose_campus">Please tap the campus that you attend.</string>
    <string name="prompt_get_courses">Where do you want to get your course list from?</string>
    <string name="prompt_select_periods">Check the periods when this course meets below.</string>
    <string name="label_period">Period</string>
    <string name="action_edit_courses">Edit Courses</string>
    <string name="prompt_no_courses">Tap \&quot;+\&quot; above to add a course.</string>
    <string name="action_add">Add</string>
    <string name="action_edit_course">Edit Course</string>
    <string name="action_edit">Edit</string>
    <string name="action_goto_date">Goto Date&#8230;</string>
    <string name="hello_blank_fragment">Hello blank fragment</string>
    <string name="prompt_note_text">Add note</string>
    <string name="action_goto_today">Today</string>
    <string name="option_show_checkbox">Show Checkbox</string>
    <string name="option_mark_important">Mark Important</string>
    <string name="option_hide_checkbox">Hide Checkbox</string>
    <string name="option_mark_unimportant">Mark Unimportant</string>
    <string name="text_bullet">–</string>
    <string name="action_options">iHW Options</string>
    <string name="title_activity_preferences">iHW Options</string>
    <string name="action_settings">Settings</string>
    <string name="action_go">Go</string>
    <string name="prompt_change_year">Change year:</string>
    <string name="prompt_change_campus">Change campus:</string>
    <string name="button_campus_middle">Middle</string>
    <string name="button_campus_upper">Upper</string>
    <string name="button_redownload">Redownload schedule from HW.com</string>
    <string name="prompt_courses_deleted">(All current courses will be deleted)</string>
    <string name="disclaimer">DISCLAIMER\nThis application is provided for students of Harvard-Westlake School as a service. This service may be suspended or terminated at any time. Any data stored in the application is not guaranteed to be perpetually available. In no event shall either the developer of this application or Harvard-Westlake School be liable for any direct, indirect, incidental, special, exemplary, or consequential damages (including tardiness caused by incorrect information provided in this application).\nThe developer of this application, a student at Harvard-Westlake School, is not an official representative of the school. This application and the information provided herein are approved by Harvard-Westlake School.</string>
    <string name="action_refresh">Refresh</string>
    <string name="alt_caption_link">This note is clickable.</string>
    <string name="title_activity_web_view">WebViewActivity</string>
    <string name="action_decrement">–</string>
    <string name="action_increment">+</string>

</resources>