<menu xmlns:android="http://schemas.android.com/apk/res/android" >
    <item android:id="@+id/action_goto_today" android:title="@string/action_goto_today" android:showAsAction="ifRoom" android:icon="@drawable/ic_action_go_to_today" android:visible="false" android:enabled="false"/><item android:id="@+id/action_goto_date" android:showAsAction="ifRoom" android:title="@string/action_goto_date" android:icon="@drawable/ic_action_goto_date"/><item android:id="@+id/action_edit_courses" android:title="@string/action_edit_courses" android:icon="@drawable/ic_action_edit"/>
    <item android:id="@+id/action_refresh" android:icon="@drawable/ic_action_refresh" android:title="@string/action_refresh"/><item android:id="@+id/action_options" android:title="@string/action_options" android:icon="@drawable/ic_action_settings"/>
    
    
    

</menu>