<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:orientation="vertical" >

    <TextView
        android:id="@+id/empty"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/prompt_welcome"
        android:textAppearance="?android:attr/textAppearanceLarge" />

    <LinearLayout
        android:id="@+id/layout_choose_campus"
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:animateLayoutChanges="true"
        android:gravity="center_vertical"
        android:orientation="vertical" >

        <TextView
            android:id="@+id/text_course_name"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/prompt_choose_campus"
            android:textAppearance="?android:attr/textAppearanceMedium" />

        <com.ihwapp.android.BackgroundImageButton
            android:id="@+id/button_campus_ms"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_gravity="center_horizontal"
            android:layout_marginBottom="10dp"
            android:background="@drawable/mscampus"
            android:contentDescription="@string/campus_middle" />

        <com.ihwapp.android.BackgroundImageButton
            android:id="@+id/button_campus_us"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_gravity="center_horizontal"
            android:background="@drawable/uscampus"
            android:contentDescription="@string/campus_upper" />

    </LinearLayout>

    <LinearLayout
        android:id="@+id/layout_get_courses"
        android:layout_width="wrap_content"
        android:layout_height="match_parent"
        android:gravity="center_vertical"
        android:orientation="vertical"
        android:visibility="gone" >

        <TextView
            android:id="@+id/text_endtime"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/prompt_get_courses"
            android:textAppearance="?android:attr/textAppearanceMedium" />

        <Button
            android:id="@+id/button_download"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/button_download" />

        <Button
            android:id="@+id/button_add_manually"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/button_add_manually" />
    </LinearLayout>

</LinearLayout>