<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:id="@+id/LinearLayout1"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:focusable="true"
    android:focusableInTouchMode="true"
    android:orientation="vertical"
    android:paddingBottom="@dimen/activity_vertical_margin"
    android:paddingLeft="@dimen/activity_horizontal_margin"
    android:paddingRight="@dimen/activity_horizontal_margin"
    android:paddingTop="@dimen/activity_vertical_margin"
    tools:context=".PreferencesActivity" >

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content" >

        <TextView
            android:id="@+id/textView1"
            android:layout_width="wrap_content"
            android:layout_height="match_parent"
            android:layout_weight=".01"
            android:gravity="center_vertical"
            android:text="@string/prompt_change_year"
            android:textAppearance="?android:attr/textAppearanceMedium" />

        <EditText
            android:id="@+id/text_year"
            android:layout_width="65dp"
            android:layout_height="wrap_content"
            android:ems="10"
            android:gravity="center_vertical|right"
            android:inputType="number" >

            <requestFocus />
        </EditText>

        <TextView
            android:id="@+id/text_hint_year"
            android:layout_width="35dp"
            android:layout_height="match_parent"
            android:layout_weight=".01"
            android:gravity="center_vertical"
            android:textAppearance="?android:attr/textAppearanceMedium" />

        <Button
            android:id="@+id/button_change_year"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/action_go" />

    </LinearLayout>

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginTop="10dp" >

        <TextView
            android:id="@+id/textView2"
            android:layout_width="0dip"
            android:layout_height="match_parent"
            android:layout_weight=".01"
            android:gravity="center_vertical"
            android:maxLines="2"
            android:text="@string/prompt_change_campus"
            android:textAppearance="?android:attr/textAppearanceMedium" />

        <Button
            android:id="@+id/button_middle"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/button_campus_middle" />

        <Button
            android:id="@+id/button_upper"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/button_campus_upper" />

    </LinearLayout>

    <Button
        android:id="@+id/button_redownload"
        android:layout_width="211dp"
        android:layout_height="wrap_content"
        android:layout_gravity="center_horizontal"
        android:layout_marginTop="10dp"
        android:text="@string/button_redownload" />

    <TextView
        android:id="@+id/textView3"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_gravity="center_horizontal"
        android:text="@string/prompt_courses_deleted"
        android:textAppearance="?android:attr/textAppearanceSmall" />

    <TextView
        android:id="@+id/text_disclaimer"
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:layout_marginTop="10dp"
        android:maxHeight="20000dp"
        android:maxLines="2000"
        android:scrollbarAlwaysDrawVerticalTrack="true"
        android:scrollbars="vertical"
        android:text="@string/disclaimer"
        android:textAppearance="?android:attr/textAppearanceMedium" />

</LinearLayout>
