<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:orientation="vertical" >

    <RadioGroup
        android:id="@+id/RadioGroup1"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:orientation="vertical"
        android:padding="10dp" >

        <RadioButton
            android:id="@+id/radio_middle"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:onClick="onRadioButtonClicked"
            android:text="@string/campus_middle"
            android:textColor="@drawable/black"
            android:textSize="20sp" />

        <RadioButton
            android:id="@+id/radio_upper"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:onClick="onRadioButtonClicked"
            android:text="@string/campus_upper"
            android:textColor="@drawable/black"
            android:textSize="20sp" />

    </RadioGroup>

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginBottom="16dp"
        android:gravity="center_horizontal" >

        <Button
            android:id="@+id/button_dec"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:minHeight="44dip"
            android:minWidth="56dip"
            android:onClick="decrementYear"
            android:text="@string/action_decrement" />

        <TextView
            android:id="@+id/text_year"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:textSize="20sp" />

        <Button
            android:id="@+id/button_inc"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:minHeight="44dip"
            android:minWidth="56dip"
            android:onClick="incrementYear"
            android:text="@string/action_increment" />

    </LinearLayout>

</LinearLayout>
