<?xml version="1.0" encoding="utf-8"?>
<ScrollView xmlns:android="http://schemas.android.com/apk/res/android"
    android:id="@+id/scroll_periods"
    android:layout_width="match_parent"
    android:layout_height="wrap_content" >

    <LinearLayout
        android:id="@+id/layout_notes"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:orientation="vertical" >

        <EditText
            android:id="@+id/courseNameBox"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:ems="10"
            android:hint="@string/hint_course_name"
            android:inputType="text|textCapWords"
            android:textAppearance="?android:attr/textAppearanceLarge" >

            <requestFocus />
        </EditText>

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content" >

            <EditText
                android:id="@+id/coursePeriodBox"
                android:layout_width="100dp"
                android:layout_height="wrap_content"
                android:ems="10"
                android:hint="@string/hint_course_period"
                android:inputType="number" />

            <Spinner
                android:id="@+id/courseTermBox"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:entries="@array/term_options" />
        </LinearLayout>

        <LinearLayout
            android:id="@+id/courseMeetingsContainer"
            android:layout_width="fill_parent"
            android:layout_height="wrap_content"
            android:orientation="vertical"
            android:visibility="gone" >

            <TextView
                android:id="@+id/text_course_name"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/prompt_select_periods"
                android:textAppearance="?android:attr/textAppearanceMedium" />

            <LinearLayout
                android:layout_width="fill_parent"
                android:layout_height="wrap_content"
                android:layout_gravity="center" >

                <com.ihwapp.android.RotatedTextView
                    android:id="@+id/RotatedTextView1"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_gravity="center"
                    android:layout_marginTop="20dp"
                    android:gravity="center"
                    android:text="@string/label_period"
                    android:textAppearance="?android:attr/textAppearanceSmall" />

                <TableLayout
                    android:id="@+id/courseMeetingsLayout"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content" >
                </TableLayout>
            </LinearLayout>
        </LinearLayout>
    </LinearLayout>

</ScrollView>